--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -20,23 +20,27 @@ body {
     grid-template-rows: 2fr 6fr 2fr;
 }
 
-nav {
-    display: flex;
-    justify-content: space-around;
-    background-color: var(--secondary-color);
-    color: var(--text-color);
-    text-decoration: none;
-    padding: 2rem;
-    
-}
-
 header {
     font-family: var(--font-header);
     grid-column: 1/-1;
     grid-row: 1;
     background-color: var(--primary-color);
     color: var(--text-color);
-    height: 200px;
+    padding-top: 2rem;
+}
+
+nav {
+    display: flex;
+    justify-content: space-around;
+    background-color: var(--secondary-color);
+    color: var(--text-color);
+    text-decoration: none;
+    padding: 2rem;   
+}
+
+nav a {
+    color: var(--text-color);
+    text-decoration: none;
 }
 
 main {
@@ -44,12 +48,14 @@ main {
     grid-column: 1/9;
     grid-row: 2;
     background-color: var(--third-color);
+    padding: 2rem;
 }
 
 aside {
     font-family: var(--font-aside);
     grid-column: 9/13;
     grid-row: 2;
+    padding: 2rem;
 }
 
 footer {
@@ -58,4 +64,6 @@ footer {
     grid-row: 3;
     background-color: var(--primary-color);
     color: var(--text-color);
+    text-align: center;
+    padding: 2rem;
 }
