--- a/styles/place.css
+++ b/styles/place.css
@@ -16,9 +16,9 @@
     --text: #000000;
     /* font size */
     --font-base: 16px;
-    --font-small: 0.8em;
+    --font-small: 1em;
     --font-medium: 1.5em;
-    --font-large: 2.5em;
+    --font-large: 3em;
 }
 
 @media screen and (min-width: 545px) {
@@ -28,13 +28,18 @@
         padding: 0;
         box-sizing: border-box;
     }
+
+    header {
+        padding-bottom: 30px;
+        background-color: var(--secondary-color);
+    }
     
     header h1 {
         display: flex;
         justify-content: center;
         font-size: var(--font-large);
-        padding-bottom: 20px;
         padding-top: 20px;
+        padding-bottom: 15px;
         background-color: var(--primary-color);
         color: var(--head-text);
         font-family: var(--font-header);
@@ -49,18 +54,22 @@
     }
 
     .container h2 {
-        background-color: var(--secondary-color);
+        padding-left: 1em;
+        margin-right: 5em;
+        margin-left: -0.5em;
+        margin-top: 0.5em;
+        background-color:  #fdd925e9;
         color:var(--text);
         font-family: var(--font-body);
+    }
+
+    .container p {
+        padding-left:  1em;
     }
 
     #hero {
         width: 100%;
         max-width: none;
-    }
-
-    #weather-list h2::after {
-        content: " ⛅️";
     }
 
     #large-hero {
@@ -69,14 +78,15 @@
 
     #data-list {
         position: absolute;
-        left: 30px;
-        top: 30px;
+        align-items: center;
+        left: 5%;
+        top: 20%;
     }
 
     #weather-list {
         position: absolute;
-        bottom: 40px;
-        right: 30px;
+        bottom: 10%;
+        right: 5%;
     }
 
     #weather-icon {
@@ -88,8 +98,67 @@
     }
 }
 
-@media screen and (min-width: 1050px) {
 
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+header {
+    padding-bottom: 30px;
+    background-color: var(--secondary-color);
+}
+    
+header h1 {
+    display: flex;
+    justify-content: center;
+    font-size: var(--font-large);
+    padding-top: 20px;
+    padding-bottom: 15px;
+    background-color: var(--primary-color);
+    color: var(--head-text);
+    font-family: var(--font-header);
+}
+
+#hero {
+    width: 100%;
+    max-width: none;
+}
+
+picture {
+    background-color: var(--secondary-color);
+}
+
+.container h2 {
+    padding-top: 1em;
+    padding-bottom: 1em;
+}
+
+.container p {
+    padding-top: 0.75em;
+}
+
+#data-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 1em;
+}
+
+#weather-list {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2em;
+    border-top: 1px solid var(--secondary-color);
+}
+
+#large-hero {
+    width: 100%;
 }
 
 footer {
