--- a/project/styles/trivia_master.css
+++ b/project/styles/trivia_master.css
@@ -135,7 +135,7 @@ main {
 
 #leaderboard th {
     background-color: orangered;
-    color: white;
+    color: rgb(0, 0, 0);
 }
 
 footer {
@@ -146,4 +146,54 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+
+@media (max-width: 768px) {
+    header {
+        padding: 10px;
+    }
+
+    nav ul {
+        flex-direction: column;
+    }
+
+    nav ul li {
+        margin: 5px 0;
+    }
+
+    main {
+        padding: 10px;
+    }
+
+    #quiz, #leaderboard {
+        margin: 10px 0;
+        padding: 10px;
+    }
+
+    #leaderboard th, #leaderboard td {
+        padding: 5px;
+    }
+}
+
+@media (max-width: 480px) {
+    header {
+        font-size: 1.5em;
+    }
+
+    nav ul li a {
+        font-size: 1.2em;
+    }
+
+    #quiz, #leaderboard {
+        padding: 5px;
+    }
+
+    #quiz p, #leaderboard {
+        font-size: 1em;
+    }
+
+    .button-container button {
+        font-size: 1em;
+        padding: 5px 10px;
+    }
 }
